passes all tests

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,3 +1,11 @@
+// RESETS
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html {
-  text-align: center;
+  font-size: 10px;
 }
