--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html {
-  text-align: center;
+  font-size: 10px;
 }
