--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,11 +1,130 @@
+// VARIABLES
+$background: #293241;
+$white: rgb(235, 235, 235);
+$green: rgb(11, 248, 11);
+
+$main-font: "Roboto Mono", monospace;
+
 // RESETS
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  transition: all 150ms ease;
 }
 
 html {
   font-size: 10px;
+  background: rgb(98, 99, 100);
+  background: radial-gradient(circle, rgb(77, 77, 77) 0%, rgb(0, 0, 0) 100%);
+  color: $white;
+  font-family: $main-font;
+  text-align: center;
+}
+
+// STYLING
+
+h1 {
+  font-size: 4.5rem;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+}
+
+// CLOCK
+
+#pomodoro-container {
+  margin: 0 auto;
+  width: 90vw;
+  max-width: 500px;
+  border: 1rem solid rgb(43, 42, 42);
+  box-shadow: 0px 0px 50px 0px rgba(70, 69, 69, 0.75);
+  border-radius: 2rem;
+  padding: 2rem;
+  padding-bottom: 8rem;
+  color: $green;
+  background: black;
+  position: relative;
+
+  .clock {
+    &::after {
+      content: "";
+      width: 70%;
+      height: 0.2rem;
+      background: $green;
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 2rem;
+    }
+
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 1.6rem;
+
+      i {
+        font-size: 2.8rem;
+      }
+    }
+
+    #time-left {
+      font-size: 8rem;
+    }
+  }
+
+  .controls {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+
+    button {
+      font-size: 3.5rem;
+      background: none;
+      border: none;
+      color: darken($green, 5%);
+      margin: 2rem;
+      cursor: pointer;
+
+      &:hover {
+        color: $green;
+        transform: scale(1.05);
+      }
+    }
+  }
+
+  .settings-container {
+    .settings {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 1rem 0 1rem 0;
+
+      .labels {
+        font-size: 1.6rem;
+      }
+
+      .interface {
+        display: grid;
+        grid-template-columns: repeat(3, 4rem);
+        .timer-setting {
+          font-size: 2rem;
+        }
+
+        button {
+          border: none;
+          background: none;
+          color: darken($green, 5%);
+          cursor: pointer;
+          font-size: 1.5rem;
+
+          &:hover {
+            color: lighten($green, 5%);
+          }
+        }
+      }
+    }
+  }
 }
