--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -62,6 +62,7 @@ h1 {
       align-items: center;
       justify-content: space-between;
       font-size: 1.6rem;
+      color: darken($green, 5%);
 
       i {
         font-size: 2.8rem;
@@ -101,6 +102,15 @@ h1 {
       align-items: center;
       justify-content: space-between;
       margin: 1rem 0 1rem 0;
+
+      &.disableControls_true {
+        .interface,
+        .labels,
+        .interface button {
+          color: darken($green, 30%);
+          pointer-events: none;
+        }
+      }
 
       .labels {
         font-size: 1.6rem;
