--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   -webkit-transition: all 150ms ease;
   -o-transition: all 150ms ease;
   transition: all 150ms ease;
+  outline: none;
 }
 
 html {
